[metadata]
name = lti_ica
version = 1.0.0
author = Patrik Reizinger, Goutham Rajendran
author_email = prmedia17@gmail.com
description = ICA in LTI systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rpatrik96/lti-ica
project_urls =
    Bug Tracker = https://github.com/rpatrik96/lti-ica
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
